Fixed collapsing margins for mobile.css

--- a/social-proof-section/mobile.css
+++ b/social-proof-section/mobile.css
@@ -59,8 +59,13 @@ header h2 {
     color: #512051;
 }
 
+footer, article {
+    display: inline-block;
+}
+
 footer article {
     border-radius: 10px;
+    margin-left: 30px;
     width: 327px;
     height: 248px;
     background-color: #512051;
@@ -73,7 +78,7 @@ footer article {
 }
 
 .pic__and__name {
-    padding-top: 40px;
+    margin-top: 40px;
     padding-left: 37px;
     width: 162px;
     height: 40px;
